--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>TripCraft - AI-Powered Travel Itinerary Generator</title>
+    <title>PlanMyTrip - AI-Powered Travel Itinerary Generator</title>
     <meta name="description" content="Create personalized day-by-day travel itineraries with AI. Plan your perfect trip in minutes with custom recommendations based on your preferences, budget, and interests." />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
